[package]
name = "trust_ip"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.1"
ip-in-subnet = "0.1.4"
log = "0.4.20"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
