[package]
name = "trust_ip"
version = "2.0.3"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
env_logger = "0.11.4"
ip-in-subnet = "0.1.4"
log = "0.4.22"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
